--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                  <p>Welcome to LoveCode2 community go visit to the website</p>
 
                  <button type="button">Website</button>
-                 <button type="button">Discord Community</button>
+                 <a href="https://discord.gg/6pCGrHPm">Discord</a>
              </div>
 
          </div>
